--- a/src/components/main/pokemon.css
+++ b/src/components/main/pokemon.css
@@ -54,12 +54,12 @@ img {
   height: 100px;
 }
 
-.Rock {
+.rock {
   background-color: #b69e31;
   color: #b69e31;
 }
 
-.Ghost {
+.ghost {
   background-color: #70559b;
   color: #70559b;
 }
