--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -49,7 +49,7 @@
 .boton-submit {
     margin-top: 20px;
     border-radius: 50%;
-    background-image: url(../Imagenes/POKEBOLA.png);
+    background-image: url(../../../public/Img/POKEbola.png);
     background-size: cover;
     width: 65px;
     height: 65px;
