--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
 }
-.descripcion-bienvenidos {
+.descripcion-bienvenida {
     grid-row: 2;
     background-color: whitesmoke;
     display: grid;
@@ -26,7 +26,7 @@
     align-items: center;
     justify-content: center;
 }
-.descripcion {
+.descripcion-login {
     grid-row: 2;
     display: flex;
     align-items: center;
@@ -49,7 +49,7 @@
 .boton-submit {
     margin-top: 20px;
     border-radius: 50%;
-    background-image: url(../../../public/Img/POKEbola.png);
+    background-image: url('./assets//POKEbola.png');
     background-size: cover;
     width: 65px;
     height: 65px;
