--- a/src/components/main/agregar-pokemon/post-pokemon.css
+++ b/src/components/main/agregar-pokemon/post-pokemon.css
@@ -36,11 +36,12 @@
     width: 85px;
     height: 35px;
     border-radius: 10%;
-    border: 0px;
+    border: 1px solid white;
     font-family: 'Silkscreen', cursive;
     color: white;
     background-color: blue;
     cursor: pointer;
+
 }
 
 .formulario-agregar > input {
@@ -56,7 +57,7 @@
     height: 25px;
     font-size: x-small;
     border-radius: 10%;
-    border: 0px;
+    border: 1px solid white;
     font-family: 'Silkscreen', cursive;
     color: black;
     background-color: yellow;
