Se agregaron funcionalidades a las flechas de ir para adelante y para atras

--- a/src/components/Inicio/Inicio.css
+++ b/src/components/Inicio/Inicio.css
@@ -78,7 +78,7 @@
     background-size: contain;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     
 }
 
